add emotions
