# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  version: "3.4.2-dev"
+  version: "3.5.0-dev"
   title: Metahkg Api
   description:
     "The Metahkg Api is a REST api written in fastify/typescript, with MongoDB as the database.
@@ -42,7 +42,7 @@ paths:
       summary: Get thread
       description: "Get a selection of comments and other data from a thread.
         Authentication required if thread is [hidden](https://docs.metahkg.org/docs/customize/categories/hide).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/thread.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/thread.ts)"
       operationId: thread
       parameters:
         - in: path
@@ -129,7 +129,7 @@ paths:
       operationId: threadCheck
       summary: Check if a thread exists
       description: "Check if a thread exists.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/checkExist.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/checkExist.ts)"
       parameters:
         - in: query
           name: id
@@ -157,7 +157,7 @@ paths:
       description: "
         Get the images of a thread. Duplicated images not included.
         Authentication required if thread is [hidden](https://docs.metahkg.org/docs/customize/categories/hide).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/images.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/images.ts)"
       parameters:
         - in: path
           name: id
@@ -189,7 +189,7 @@ paths:
       operationId: threadCreate
       summary: Create thread
       description: "Create a thread. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/create.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/create.ts)"
       requestBody:
         required: true
         content:
@@ -244,7 +244,7 @@ paths:
       summary: Get comment
       description: "Get a comment from a thread with thread id and comment id.
         Authentication required if thread is [hidden](https://docs.metahkg.org/docs/customize/categories/hide).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/comment.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/comment.ts)"
       parameters:
         - in: path
           name: id
@@ -283,7 +283,7 @@ paths:
       summary: Get replies
       description: "Get the full comment objects of replies to the specified comment.
         Authentication required if thread is [hidden](https://docs.metahkg.org/docs/customize/categories/hide).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/replies.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/replies.ts)"
       parameters:
         - in: path
           name: id
@@ -327,7 +327,7 @@ paths:
       summary: Get comment images.
       description: "Get list of images from a comment.
         Authentication required if thread is [hidden](https://docs.metahkg.org/docs/customize/categories/hide).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/images.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/images.ts)"
       parameters:
         - in: path
           name: id
@@ -368,7 +368,7 @@ paths:
       summary: Create comment
       description: "Create a new comment in the specified thread.
         Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/create.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/create.ts)"
       parameters:
         - in: path
           name: id
@@ -425,7 +425,7 @@ paths:
         - bearerAuth: []
       summary: Vote on comment
       description: "Vote on a comment. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/vote.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/vote.ts)"
       requestBody:
         required: true
         content:
@@ -469,6 +469,51 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /thread/{id}/comment/{cid}/emotion:
+    post:
+      tags:
+        - comment
+      operationId: commentEmotion
+      security:
+        - bearerAuth: []
+      summary: "Emotion on comment"
+      description: "Emotion on comment. Authentication is required.
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/emotion.ts)"
+      parameters:
+        - in: path
+          name: id
+          description: thread id
+          required: true
+          schema:
+            $ref: "#/components/schemas/Thread/properties/id"
+        - in: path
+          name: cid
+          description: comment id
+          required: true
+          schema:
+            $ref: "#/components/schemas/CommentC/properties/id"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                emotion:
+                  $ref: "#/components/schemas/Emotion"
+      responses:
+        "200":
+          $ref: "#/components/responses/OK"
+        "400":
+          $ref: "#/components/responses/Invalid"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          description: "Thread or comment not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /thread/{id}/comment/{cid}/pin:
     put:
       tags:
@@ -479,7 +524,7 @@ paths:
       summary: Pin comment
       description: "Pin a comment in a thread. Authentication is required.
         Works only if the user is the original poster of the thread.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/pin.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3-dev/src/routes/thread/comment/pin.ts)"
       parameters:
         - in: path
           name: id
@@ -518,7 +563,7 @@ paths:
       summary: Unpin comment
       description: "Unpin a pinned comment in a thread. Authentication is required.
         Works only if the user is the original poster of the thread.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/thread/comment/unpin.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/thread/comment/unpin.ts)"
       parameters:
         - in: path
           name: id
@@ -561,7 +606,7 @@ paths:
       summary: Get status
       description:
         "Get status (whether user is logged in, i.e. check if the token is valid).
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/status.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/status.ts)"
       responses:
         "200":
           description: Success
@@ -584,7 +629,7 @@ paths:
         - bearerAuth: []
       summary: Get blocked users
       description: "Get blocked users. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/blocked.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/blocked.ts)"
       responses:
         "200":
           description: Success
@@ -605,7 +650,7 @@ paths:
         - bearerAuth: []
       summary: Get votes
       description: "Get your votes in a thread. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/votes.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/votes.ts)"
       parameters:
         - name: id
           in: path
@@ -675,7 +720,7 @@ paths:
         - bearerAuth: []
       summary: Unblock user
       description: "Unblock user. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/unblock.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/unblock.ts)"
       requestBody:
         required: true
         content:
@@ -707,7 +752,7 @@ paths:
         - bearerAuth: []
       summary: Set avatar
       description: "Set avatar. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/avatar.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/avatar.ts)"
       requestBody:
         required: true
         content:
@@ -762,7 +807,7 @@ paths:
         - bearerAuth: []
       summary: Rename
       description: "Rename yourself. Authentication is required.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/me/rename.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/me/rename.ts)"
       requestBody:
         required: true
         content:
@@ -800,7 +845,7 @@ paths:
       operationId: categories
       summary: Get categories
       description: "Get categories.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/categories.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/categories.ts)"
       responses:
         "200":
           description: Success
@@ -817,7 +862,7 @@ paths:
       operationId: category
       summary: Get category
       description: "Get a category.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/category.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/category.ts)"
       parameters:
         - name: id
           in: path
@@ -850,7 +895,7 @@ paths:
       operationId: usersProfile
       summary: Get user profile
       description: "Get user profile.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/profile.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/profile.ts)"
       parameters:
         - name: id
           in: path
@@ -893,7 +938,7 @@ paths:
       operationId: usersProfileName
       summary: Get user name
       description: "Get user name.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/profile.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/profile.ts)"
       parameters:
         - name: id
           in: path
@@ -928,7 +973,7 @@ paths:
       operationId: usersProfileAvatar
       summary: Get user avatar
       description: "Get user avatar. Returns either the avatar or a default avatar.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/avatars.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/avatars.ts)"
       parameters:
         - name: id
           in: path
@@ -953,7 +998,7 @@ paths:
       operationId: usersLogin
       summary: Login
       description: "Login with username/email and password. A jwt token is returned.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/login.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/login.ts)"
       requestBody:
         required: true
         content:
@@ -999,7 +1044,7 @@ paths:
       summary: Register
       description:
         "Register an account. A verification email is sent to the email address after the request completes.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/register.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/register.ts)"
       operationId: usersRegister
       requestBody:
         required: true
@@ -1052,7 +1097,7 @@ paths:
       operationId: usersVerify
       summary: Verify email
       description: "Verify email. A jwt token is returned.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/verify.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/verify.ts)"
       requestBody:
         required: true
         content:
@@ -1093,7 +1138,7 @@ paths:
       operationId: usersResend
       summary: Resend verification email
       description: "Resend verification email.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/resend.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/resend.ts)"
       requestBody:
         required: true
         content:
@@ -1137,7 +1182,7 @@ paths:
       summary: Forgot password
       description:
         "Send a password reset email. A limit of two resets per day is enforced.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/forgot.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/forgot.ts)"
       requestBody:
         required: true
         content:
@@ -1180,7 +1225,7 @@ paths:
       operationId: usersReset
       summary: Reset password
       description: "Reset password. A jwt token is returned.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/users/reset.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/users/reset.ts)"
       requestBody:
         required: true
         content:
@@ -1230,7 +1275,7 @@ paths:
       operationId: menuCategory
       summary: Get threads in a category
       description: "Get threads in a category.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/menu/get.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/menu/get.ts)"
       parameters:
         - name: category
           in: path
@@ -1295,7 +1340,7 @@ paths:
       operationId: menuSearch
       summary: Search threads
       description: "Search threads.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/menu/search.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/menu/search.ts)"
       parameters:
         - name: q
           description: "Search query"
@@ -1364,7 +1409,7 @@ paths:
       operationId: menuHistory
       summary: Get threads created by a user
       description: "Get threads created by a user.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/menu/history.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/menu/history.ts)"
       parameters:
         - name: id
           in: path
@@ -1426,7 +1471,7 @@ paths:
       operationId: menuThreads
       summary: Get threads
       description: "Get threads.
-        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.4.2-dev/src/routes/menu/threads.ts)"
+        [Source](https://gitlab.com/metahkg/metahkg-server/-/blob/3.5.0-dev/src/routes/menu/threads.ts)"
       parameters:
         - in: query
           name: threads
@@ -1492,15 +1537,28 @@ components:
           schema:
             $ref: "#/components/schemas/Error"
   schemas:
+    Emotion:
+      type: string
+      enum:
+        - sob
+        - joy
+        - smile
+        - sad
+        - sweatsmile
+        - heart
+        - grin
+        - good
+        - bad
+
     OK:
       type: object
       required:
-        - response
+        - success
       properties:
-        response:
-          type: string
+        success:
+          type: boolean
           enum:
-            - ok
+            - true
     Token:
       type: object
       required:
@@ -1712,6 +1770,18 @@ components:
                 minimum: 1
                 format: int64
               description: list of comment ids that are replies to this comment
+            emotions:
+              type: array
+              items:
+                type: object
+                required:
+                  - user
+                  - emotion
+                properties:
+                  user:
+                    $ref: "#/components/schemas/User/properties/id"
+                  emotion:
+                    $ref: "#/components/schemas/Emotion"
     Thread:
       type: object
       required:
